--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.cammin.ldtkunity": "6.6.2",
+    "com.unity.2d.sprite": "1.0.0",
     "com.unity.addressables": "2.2.2",
     "com.unity.cinemachine": "3.1.3",
     "com.unity.collab-proxy": "2.7.1",
